<resources>
    <string name="app_name">ScoreKeeper</string>
    <string name="score_string">Score</string>
    <string name="team_one_name">Fnatic</string>
    <string name="team_two_name">myInstanity</string>
    <string name="reset_button_string">Reset Scores</string>

    <string name="kills">Kills</string>
    <string name="forts">Forts</string>
    <string name="deaths">Deaths</string>

    <string name="default_score">0</string>
    <string name="victory">Victory</string>

    <string name="disclaimer">* All Imaages are properties of their respective owners.
                                \n* "Heroes of the Storm" is property of Blizzard Entertainment.
                                \n* All Images are used for educational purposes.</string>
    <string name="disclaimer_activity_name">Disclaimer</string>
</resources>
